// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`select (isCI = false) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > can cancel 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[31m■[39m  foo
[90m│[39m  [9m[2mopt0[22m[29m
[90m│[39m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > correctly limits options when message wraps to multiple lines 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  This is a very 
[36m│[39m  long message that
[36m│[39m   will wrap to 
[36m│[39m  multiple lines
[36m│[39m  [32m●[39m Option 0
[36m│[39m  [2m○[22m [2mOption 1[22m
[36m│[39m  [2m○[22m [2mOption 2[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=5>",
  "<erase.down>",
  "[36m│[39m  [2m○[22m [2mOption 0[22m
[36m│[39m  [32m●[39m Option 1
[36m│[39m  [2m○[22m [2mOption 2[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=6>",
  "<erase.down>",
  "[36m│[39m  [2m○[22m [2mOption 1[22m
[36m│[39m  [32m●[39m Option 2
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=5>",
  "<erase.down>",
  "[36m│[39m  [2m...[22m
[36m│[39m  [32m●[39m Option 3
[36m│[39m  [2m○[22m [2mOption 4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=6>",
  "<erase.down>",
  "[36m│[39m  [32m●[39m Option 4
[36m│[39m  [2m○[22m [2mOption 5[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  This is a very 
[32m│[39m  long message that
[32m│[39m   will wrap to 
[32m│[39m  multiple lines
[90m│[39m  [2mOption 4[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > correctly limits options with explicit multiline message 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  Choose an option:
[36m│[39m  Line 2 of the message
[36m│[39m  Line 3 of the message
[36m│[39m  [32m●[39m Option 0
[36m│[39m  [2m○[22m [2mOption 1[22m
[36m│[39m  [2m○[22m [2mOption 2[22m
[36m│[39m  [2m○[22m [2mOption 3[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=4>",
  "<erase.down>",
  "[36m│[39m  [2m○[22m [2mOption 0[22m
[36m│[39m  [32m●[39m Option 1
[36m│[39m  [2m○[22m [2mOption 2[22m
[36m│[39m  [2m○[22m [2mOption 3[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=5>",
  "<erase.down>",
  "[36m│[39m  [2m○[22m [2mOption 1[22m
[36m│[39m  [32m●[39m Option 2
[36m│[39m  [2m○[22m [2mOption 3[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=4>",
  "<erase.down>",
  "[36m│[39m  [2m...[22m
[36m│[39m  [2m○[22m [2mOption 2[22m
[36m│[39m  [32m●[39m Option 3
[36m│[39m  [2m○[22m [2mOption 4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  Choose an option:
[32m│[39m  Line 2 of the message
[32m│[39m  Line 3 of the message
[90m│[39m  [2mOption 3[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > down arrow selects next option 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m○[22m [2mopt0[22m
[36m│[39m  [32m●[39m opt1
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mopt1[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > global withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "[36m◆[39m  foo
[32m●[39m opt0
[2m○[22m [2mopt1[22m

",
  "<cursor.backward count=999><cursor.up count=4>",
  "<erase.down>",
  "[32m◇[39m  foo
[2mopt0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > handles mixed size re-renders 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  Whatever
[36m│[39m  [32m●[39m Long Option
[36m│[39m  Long Option
[36m│[39m  Long Option
[36m│[39m  Long Option
[36m│[39m  Long Option
[36m│[39m  Long Option
[36m│[39m  Long Option
[36m│[39m  Long Option
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=12>",
  "<erase.down>",
  "[90m│[39m
[36m◆[39m  Whatever
[36m│[39m  [2m...[22m
[36m│[39m  [2m○[22m [2mOption 0[22m
[36m│[39m  [2m○[22m [2mOption 1[22m
[36m│[39m  [2m○[22m [2mOption 2[22m
[36m│[39m  [32m●[39m Option 3
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=8>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  Whatever
[90m│[39m  [2mOption 3[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > renders disabled options 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [90m○[39m [90mOption 0[39m
[36m│[39m  [32m●[39m Option 1
[36m│[39m  [90m○[39m [90mOption 2[39m [2m(Hint 2)[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mOption 1[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > renders multi-line option labels 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m Option 0
[36m│[39m  with multiple lines
[36m│[39m  [2m○[22m [2mOption 1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m○[22m [2mOption 0[22m
[36m│[39m  [2mwith multiple lines[22m
[36m│[39m  [32m●[39m Option 1
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mOption 1[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > renders option hints 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0 [2m(Hint 0)[22m
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > renders option labels 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m Option 0
[36m│[39m  [2m○[22m [2mOption 1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mOption 0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > renders options and message 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > up arrow selects previous option 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m○[22m [2mopt0[22m
[36m│[39m  [32m●[39m opt1
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "[36m◆[39m  foo
[32m●[39m opt0
[2m○[22m [2mopt1[22m

",
  "<cursor.backward count=999><cursor.up count=4>",
  "<erase.down>",
  "[32m◇[39m  foo
[2mopt0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > wraps long cancelled message 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m foo foo foo foo foo foo 
[36m│[39m  foo foo foo foo foo foo foo
[36m│[39m   foo foo foo foo foo foo 
[36m│[39m  foo foo foo foo foo foo foo
[36m│[39m   foo foo foo foo
[36m│[39m  [2m○[22m [2mOption 1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[31m■[39m  foo
[90m│[39m  [9m[2mfoo foo foo foo foo foo foo[22m
[90m│[39m  [2m foo foo foo foo foo foo [22m
[90m│[39m  [2mfoo foo foo foo foo foo foo[22m
[90m│[39m  [2m foo foo foo foo foo foo [22m
[90m│[39m  [2mfoo foo foo foo[22m[29m
[90m│[39m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > wraps long messages 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo foo foo foo foo foo foo
[36m│[39m   foo foo foo foo foo foo 
[36m│[39m  foo foo foo foo foo foo foo
[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo foo foo foo foo foo foo
[32m│[39m   foo foo foo foo foo foo 
[32m│[39m  foo foo foo foo foo foo foo
[90m│[39m  [2mopt0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > wraps long results 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m foo foo foo foo foo foo 
[36m│[39m  foo foo foo foo foo foo foo
[36m│[39m   foo foo foo foo foo foo 
[36m│[39m  foo foo foo foo foo foo foo
[36m│[39m   foo foo foo foo
[36m│[39m  [2m○[22m [2mOption 1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mfoo foo foo foo foo foo foo[22m
[90m│[39m  [2m foo foo foo foo foo foo [22m
[90m│[39m  [2mfoo foo foo foo foo foo foo[22m
[90m│[39m  [2m foo foo foo foo foo foo [22m
[90m│[39m  [2mfoo foo foo foo[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > can cancel 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[31m■[39m  foo
[90m│[39m  [9m[2mopt0[22m[29m
[90m│[39m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > correctly limits options when message wraps to multiple lines 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  This is a very 
[36m│[39m  long message that
[36m│[39m   will wrap to 
[36m│[39m  multiple lines
[36m│[39m  [32m●[39m Option 0
[36m│[39m  [2m○[22m [2mOption 1[22m
[36m│[39m  [2m○[22m [2mOption 2[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=5>",
  "<erase.down>",
  "[36m│[39m  [2m○[22m [2mOption 0[22m
[36m│[39m  [32m●[39m Option 1
[36m│[39m  [2m○[22m [2mOption 2[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=6>",
  "<erase.down>",
  "[36m│[39m  [2m○[22m [2mOption 1[22m
[36m│[39m  [32m●[39m Option 2
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=5>",
  "<erase.down>",
  "[36m│[39m  [2m...[22m
[36m│[39m  [32m●[39m Option 3
[36m│[39m  [2m○[22m [2mOption 4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=6>",
  "<erase.down>",
  "[36m│[39m  [32m●[39m Option 4
[36m│[39m  [2m○[22m [2mOption 5[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  This is a very 
[32m│[39m  long message that
[32m│[39m   will wrap to 
[32m│[39m  multiple lines
[90m│[39m  [2mOption 4[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > correctly limits options with explicit multiline message 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  Choose an option:
[36m│[39m  Line 2 of the message
[36m│[39m  Line 3 of the message
[36m│[39m  [32m●[39m Option 0
[36m│[39m  [2m○[22m [2mOption 1[22m
[36m│[39m  [2m○[22m [2mOption 2[22m
[36m│[39m  [2m○[22m [2mOption 3[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=4>",
  "<erase.down>",
  "[36m│[39m  [2m○[22m [2mOption 0[22m
[36m│[39m  [32m●[39m Option 1
[36m│[39m  [2m○[22m [2mOption 2[22m
[36m│[39m  [2m○[22m [2mOption 3[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=5>",
  "<erase.down>",
  "[36m│[39m  [2m○[22m [2mOption 1[22m
[36m│[39m  [32m●[39m Option 2
[36m│[39m  [2m○[22m [2mOption 3[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=4>",
  "<erase.down>",
  "[36m│[39m  [2m...[22m
[36m│[39m  [2m○[22m [2mOption 2[22m
[36m│[39m  [32m●[39m Option 3
[36m│[39m  [2m○[22m [2mOption 4[22m
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  Choose an option:
[32m│[39m  Line 2 of the message
[32m│[39m  Line 3 of the message
[90m│[39m  [2mOption 3[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > down arrow selects next option 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m○[22m [2mopt0[22m
[36m│[39m  [32m●[39m opt1
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mopt1[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > global withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "[36m◆[39m  foo
[32m●[39m opt0
[2m○[22m [2mopt1[22m

",
  "<cursor.backward count=999><cursor.up count=4>",
  "<erase.down>",
  "[32m◇[39m  foo
[2mopt0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > handles mixed size re-renders 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  Whatever
[36m│[39m  [32m●[39m Long Option
[36m│[39m  Long Option
[36m│[39m  Long Option
[36m│[39m  Long Option
[36m│[39m  Long Option
[36m│[39m  Long Option
[36m│[39m  Long Option
[36m│[39m  Long Option
[36m│[39m  [2m...[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=12>",
  "<erase.down>",
  "[90m│[39m
[36m◆[39m  Whatever
[36m│[39m  [2m...[22m
[36m│[39m  [2m○[22m [2mOption 0[22m
[36m│[39m  [2m○[22m [2mOption 1[22m
[36m│[39m  [2m○[22m [2mOption 2[22m
[36m│[39m  [32m●[39m Option 3
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=8>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  Whatever
[90m│[39m  [2mOption 3[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > renders disabled options 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [90m○[39m [90mOption 0[39m
[36m│[39m  [32m●[39m Option 1
[36m│[39m  [90m○[39m [90mOption 2[39m [2m(Hint 2)[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mOption 1[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > renders multi-line option labels 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m Option 0
[36m│[39m  with multiple lines
[36m│[39m  [2m○[22m [2mOption 1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m○[22m [2mOption 0[22m
[36m│[39m  [2mwith multiple lines[22m
[36m│[39m  [32m●[39m Option 1
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mOption 1[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > renders option hints 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0 [2m(Hint 0)[22m
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > renders option labels 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m Option 0
[36m│[39m  [2m○[22m [2mOption 1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mOption 0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > renders options and message 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > up arrow selects previous option 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m○[22m [2mopt0[22m
[36m│[39m  [32m●[39m opt1
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mopt0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "[36m◆[39m  foo
[32m●[39m opt0
[2m○[22m [2mopt1[22m

",
  "<cursor.backward count=999><cursor.up count=4>",
  "<erase.down>",
  "[32m◇[39m  foo
[2mopt0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > wraps long cancelled message 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m foo foo foo foo foo foo 
[36m│[39m  foo foo foo foo foo foo foo
[36m│[39m   foo foo foo foo foo foo 
[36m│[39m  foo foo foo foo foo foo foo
[36m│[39m   foo foo foo foo
[36m│[39m  [2m○[22m [2mOption 1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[31m■[39m  foo
[90m│[39m  [9m[2mfoo foo foo foo foo foo foo[22m
[90m│[39m  [2m foo foo foo foo foo foo [22m
[90m│[39m  [2mfoo foo foo foo foo foo foo[22m
[90m│[39m  [2m foo foo foo foo foo foo [22m
[90m│[39m  [2mfoo foo foo foo[22m[29m
[90m│[39m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > wraps long messages 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo foo foo foo foo foo foo
[36m│[39m   foo foo foo foo foo foo 
[36m│[39m  foo foo foo foo foo foo foo
[36m│[39m  [32m●[39m opt0
[36m│[39m  [2m○[22m [2mopt1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo foo foo foo foo foo foo
[32m│[39m   foo foo foo foo foo foo 
[32m│[39m  foo foo foo foo foo foo foo
[90m│[39m  [2mopt0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > wraps long results 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m foo foo foo foo foo foo 
[36m│[39m  foo foo foo foo foo foo foo
[36m│[39m   foo foo foo foo foo foo 
[36m│[39m  foo foo foo foo foo foo foo
[36m│[39m   foo foo foo foo
[36m│[39m  [2m○[22m [2mOption 1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mfoo foo foo foo foo foo foo[22m
[90m│[39m  [2m foo foo foo foo foo foo [22m
[90m│[39m  [2mfoo foo foo foo foo foo foo[22m
[90m│[39m  [2m foo foo foo foo foo foo [22m
[90m│[39m  [2mfoo foo foo foo[22m",
  "
",
  "<cursor.show>",
]
`;
